fix ledger instructions alignment

--- a/src/styles/_mobile.scss
+++ b/src/styles/_mobile.scss
@@ -1,6 +1,6 @@
 .mobile {
   position: absolute;
-  z-index: 10;
+  z-index: 250;
   height: 100vh;
   background-color: white;
   overflow: auto;
